# Rayginpy

./: .gitignore  README.md  main.spec  pyproject.toml
app/: build.py  main.py
app/core/: actor.py  context.py  node.py  raylib_game.py  scene.py  textured_actor.py  utils.py
app/game/: MainScene.py  main_scene.py  player.py  star.py
app/model/: player.py  star.py
